>2.3.1
 - Fix for https://github.com/CampagneLaboratory/goby/issues/3
 - Upgrade commons-io and dsiutils to latest jar versions. Log messages when scanning reads file with cfs mode.
 - DistinctValueCounterBitSet: now grows to biggest size at construction time.
2.3
 - concatenate-alignments mode: add ability to restrict output to a genomic slice (see -s and -e options).
 - API change: AlignmentSliceHelper makes it easier to parse and process genomic slices for sets of alignments.
 - concatenate-alignments mode: now transfers read groups to output in the same way that non-sorted concat does.
 - concatenate-alignments mode: Add a mechanism to override/define read groups/read origin info on the fly when
   reading alignments that did not include them. Coupled with changes to compact-to-sam, this makes it possible
   to get BAM files with read groups directly from Goby alignments.
 - compact-to-sam mode: fixed output of read groups, which were not correctly written for platform, platform unit,
   and library.
 - suggest-position-slices: add --restrict-per-chromosome option.  When this switch is provided, slices will be
   restricted to start and end on the same chromosome. This is useful to produce intervals to give Mutect,
   for instance.
 - Trim mode: add --trim-left --trim-right parameters to control trimming of specific sequence extremities.
 - Trim mode: add --verbose flag.
2.2.1
 - FDR mode: add ability to read groups from VCF file and adjust columns/fields marked as p-value. Mark adjusted
   columns with group q-value.
 - Somatic variation output format: annotate somatic p-value column with 'p-value' group. Fix the type of the p-value
   column to be a number (was String in release 2.2).
 - Somatic variation output format: handle unrecognized sample-ids in the parents column.
 - discover-sequence-variants mode: add assertion to give hint to user that syntax is incorrect in for -s and -e options.